--- a/jamovi/gamljglmmixed.u.yaml
+++ b/jamovi/gamljglmmixed.u.yaml
@@ -39,6 +39,12 @@ children:
                 optionPart: poisson
                 events:
                   change: './gamlj.events::onChange_model'
+              - type: RadioButton
+                name: modelSelection_nb
+                optionName: modelSelection
+                optionPart: nb
+                events:
+                  change: './gamlj.events::onChange_model'
 
           - type: Label
             label: Custom Model
